--- a/css/style.css
+++ b/css/style.css
@@ -939,12 +939,21 @@ fieldset[disabled] .btn-success.active {
 .contact-section .form-control:focus{
 	border: 2px solid #3b5999;
 }
-
+.project-showcase-container{
+  -ms-box-orient: horizontal;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -moz-flex;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+}
 .project-showcase{
   position: relative;
   text-align: center;
   margin-bottom: 60px;
+  width: 50%;
 }
-.project-showcase .btn-view{
-  margin-top: 0px;
-}
+
